edit rule penjualan

--- a/penjualan.html
+++ b/penjualan.html
@@ -115,14 +115,45 @@
           <div class="widget">
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-shopping-cart"></i>
+                <a href="penawaran_penjualan_list.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-upload-alt"></i>
+                  <span class="shortcut-label">Penawaran Penjualan</span> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
+            </div>
+            <!-- /widget-content - penawaran penjualan--> 
+          </div>
+          <!-- /widget -->
+        </div>
+        <!-- /span3 -->
+        <div class="span1">
+          <div class="widget">
+            <div class="widget-content" style="border: none;background: initial;">
+              <div class="shortcuts"> 
+                <a href="#" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-arrow-right"></i> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
+            </div>
+            <!-- /widget-content --> 
+          </div>
+          <!-- /widget -->
+        </div>
+        <!-- /span1 -->
+        <div class="span3">
+          <div class="widget">
+            <div class="widget-content">
+              <div class="shortcuts"> 
+                <a href="permintaan_penjualan_list.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-tags"></i>
                   <span class="shortcut-label">Permintaan Penjualan</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
             </div>
-            <!-- /widget-content --> 
+            <!-- /widget-content-permintaan penjualan -->
           </div>
           <!-- /widget -->
         </div>
@@ -146,45 +177,14 @@
           <div class="widget">
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-list-alt"></i>
-                  <span class="shortcut-label">Bukti Pembayaran</span> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content --> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span3 -->
-        <div class="span1">
-          <div class="widget">
-            <div class="widget-content" style="border: none;background: initial;">
-              <div class="shortcuts"> 
-                <a href="#" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-arrow-right"></i> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content --> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span1 -->
-        <div class="span3">
-          <div class="widget">
-            <div class="widget-content">
-              <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
+                <a href="kwitansi_penjualan_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">Kwitansi</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
             </div>
-            <!-- /widget-content --> 
+            <!-- /widget-content - Kwitansi-->
           </div>
           <!-- /widget -->
         </div>
@@ -215,45 +215,14 @@
           <div class="widget">
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-truck"></i>
-                  <span class="shortcut-label">Surat Jalan</span> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content --> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span3 -->
-        <div class="span1">
-          <div class="widget">
-            <div class="widget-content" style="border: none;background: initial;">
-              <div class="shortcuts"> 
-                <a href="#" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-arrow-left"></i> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content --> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span1 -->
-        <div class="span3">
-          <div class="widget">
-            <div class="widget-content">
-              <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-file-text-alt"></i>
+                <a href="invoice_penjualan_list.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-copy"></i>
                   <span class="shortcut-label">Invoice</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
             </div>
-            <!-- /widget-content --> 
+            <!-- /widget-content - invoice-->
           </div>
           <!-- /widget -->
         </div>
@@ -277,9 +246,24 @@
           <div class="widget">
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-copy"></i>
-                  <span class="shortcut-label">Tanda Terima</span> 
+                <a href="berita_acara_list.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-list-ol"></i>
+                  <span class="shortcut-label">Berita Acara/Absensi</span> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
+            </div>
+            <!-- /widget-content-berita acara/absensi --> 
+          </div>
+          <!-- /widget -->
+        </div>
+        <!-- /span3 -->
+        <div class="span1">
+          <div class="widget">
+            <div class="widget-content" style="border: none;background: initial;">
+              <div class="shortcuts"> 
+                <a href="#" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-arrow-left"></i> 
                 </a>
               </div>
               <!-- /shortcuts -->
@@ -288,7 +272,58 @@
           </div>
           <!-- /widget -->
         </div>
+        <!-- /span1 -->
+        <div class="span3">
+          <div class="widget">
+            <div class="widget-content">
+              <div class="shortcuts"> 
+                <a href="tanda_terima_list.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-paste"></i>
+                  <span class="shortcut-label">Tanda Terima</span> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
+            </div>
+            <!-- /widget-content-tanda terima --> 
+          </div>
+          <!-- /widget -->
+        </div>
         <!-- /span3 -->
+      </div>
+      <div class="row">
+        <div class="span3">
+          <div class="widget">
+            <div class="widget-content" style="border: none;background: initial;">
+              <div class="shortcuts"> 
+                <a href="#" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-arrow-down"></i> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
+            </div>
+            <!-- /widget-content --> 
+          </div>
+          <!-- /widget -->
+        </div>
+        <!-- /span1 -->
+      </div>
+      <div class="row">
+        <div class="span3">
+          <div class="widget">
+            <div class="widget-content">
+              <div class="shortcuts"> 
+                <a href="bukti_pembayaran_list.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-list-alt"></i>
+                  <span class="shortcut-label">Bukti Pembayaran</span> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
+            </div>
+            <!-- /widget-content - bukti pembayaran-->
+          </div>
+          <!-- /widget -->
+        </div>
+        <!-- /span1 -->
       </div>
     </div>
     <!-- /container --> 
