add permintaan penjualan

--- a/permintaan_penjualan_list.html
+++ b/permintaan_penjualan_list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>List Penawaran Penjualan - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
+<title>List Permintaan Penjualan - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -125,7 +125,7 @@
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="penawaran_penjualan_new.html" class="shortcut" style="width: 100%;">
+                <a href="permintaan_penjualan_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
                 </a>
@@ -140,7 +140,7 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>List Penawaran Penjualan</h3>
+              <h3>List Permintaan Penjualan</h3>
               <div style="float:right; margin-top:5px; margin-right:5px;">
                 <input type="checkbox">Terproses
                 <input type="checkbox">Ditutup
@@ -154,14 +154,16 @@
                 <thead>
                   <tr>
                     <th> Tanggal </th>
-                    <th> No. Penawaran </th>
-                    <th> No. Pemesan </th>
-                    <th> Dipesan Oleh </th>
+                    <th> No. SO </th>
+                    <th> No. Pelanggan </th>
+                    <th> Nama Pelanggan </th>
                     <th> Status </th>
+                    <th> No. PO </th>
                     <th> Diskon </th>
                     <th> Pajak </th>
                     <th> Biaya Kirim </th>
                     <th> Nilai Faktur </th>
+                    <th> Uang Muka </th>
                     <th> Keterangan</th>
                     <th class="td-actions">Actions</th>
                   </tr>
@@ -174,9 +176,11 @@
                     <td> PT. Client 1 </td>
                     <td> Mengantri </td>
                     <td> - </td>
+                    <td> 0 </td>
                     <td> Rp 180.000 </td>
                     <td> - </td>
                     <td> Rp 385.000 </td>
+                    <td> - </td>
                     <td> - </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>                
