--- a/penjualan.html
+++ b/penjualan.html
@@ -277,7 +277,7 @@
           <div class="widget">
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="tanda_terima_list.html" class="shortcut" style="width: 100%;">
+                <a href="tanda_terima_penjualan_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-paste"></i>
                   <span class="shortcut-label">Tanda Terima</span> 
                 </a>
