update print kwitansi

--- a/print_kwitansi.html
+++ b/print_kwitansi.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+    <link href="assets/css/font-awesome.css" rel="stylesheet">
     <style type="text/css" media="all">
-    	* {
-			box-sizing: border-box;
-			-moz-box-sizing: border-box;
-			-webkit-box-sizing: border-box;
-		}
+        * {
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+        }
         @page {
             size: A4 landscape; /* can use also 'landscape' for orientation */
             margin: 0.2in;
@@ -40,53 +41,53 @@
         }
 
         table {
-		    border-collapse: collapse;
-		}
+            border-collapse: collapse;
+        }
 
-		table, th, td {
-		    border: 1px solid black;
-		}
+        table, th, td {
+            border: 1px solid black;
+        }
 
-		div, tr {
-			-webkit-print-color-adjust: exact; 
-		}
+        div, tr {
+            -webkit-print-color-adjust: exact; 
+        }
 
-		th, td {
-		    padding: 5px;
-		    text-align: left;
-		}
+        th, td {
+            padding: 5px;
+            text-align: left;
+        }
 
-		.remove-bottom-border {
-			border-bottom: 1px solid white;
-		}
+        .remove-bottom-border {
+            border-bottom: 1px solid white;
+        }
 
         .remove-bottom-border.add-bottom {
             border-bottom: 1px solid black;   
         }
 
-		tr.header-color th {
-			text-align:center;
-			background-color:blue;
-			color:white;
-		}
+        tr.header-color th {
+            text-align:center;
+            background-color:blue;
+            color:white;
+        }
 
-		.row {
-			display: block;
-			margin-bottom:20px;
-		}
+        .row {
+            display: block;
+            margin-bottom:20px;
+        }
 
-		.ovrlw {
-			overflow:hidden;			
-		}
+        .ovrlw {
+            overflow:hidden;            
+        }
 
-		.brdr {
-			border: 1px solid;
-			padding: 5px; 
-		}
+        .brdr {
+            border: 1px solid;
+            padding: 5px; 
+        }
 
-		p, ul, ol, h3 {
-			margin: 0;
-		}
+        p, ul, ol, h3 {
+            margin: 0;
+        }
 
         .ftr {
             border:1px solid;
@@ -144,76 +145,172 @@
             color: white;
         }
 
-        .box.green {
-            background: #A3F1A3;
-        }
-
         .delimiter {
             width: 80px;
         }
 
-        table.no-border, table.no-border th, table.no-border td {
+        table.no-border, table.no-border>tbody>tr>th, table.no-border>tbody>tr>td {
             border: none;
         }
 
-        .brdr-red {
-            border: 2px solid red;
+        .logo-side {
+            margin-left: 190px;
         }
 
-        .kwi {
-            font-weight: bold;
-            color: red;
+        .srt-jln {
             font-size: 20px;
-            text-decoration: underline;
+            font-weight: bold;
         }
 
-        .fnt-sml {
-            font-size: 12px;
-            color: blue;
+        .vrt-top {
+            vertical-align: top;
+        }
+
+        .tnd-trm {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .hlf-blck {
+            width: 49%;
+        }
+
+        .prf {
+            width: 13%;
+        }
+        tr.pd-topbot-2 td {
+            padding: 2px 5px;
+        }
+
+        table.border>tbody>tr {
+            border: 1px solid black;
+        }
+
+        table.kwt th, table.kwt td {
+            padding: 1px;
+        }
+
+        .kwt {
+            border-top: none;
+            border-bottom: 1px solid;
+            height: 5px;
         }
     </style>
 </head>
 
 <body>
     <div id="page-content">
-        <div class="row blck ovrlw">
-            <div class="box cntr pd10 rgt brdr-red">
-                <p><span class="kwi">KWITANSI</span><br/><span class="fnt-sml">0103/KW-XII/2015</span></p>
-            </div>
-        </div>
-        <div class="row blck">
-            <table class="no-border">
-                <tr>
-                    <td>Sudah diterima dari</td>
-                    <td class="delimiter">:</td>
-                    <td>PT. JGC INDONESIA</td>
-                </tr>
-                <tr>
-                    <td>Banyaknya uang</td>
-                    <td class="delimiter">:</td>
-                    <td>
-                        <div class="box pd10 brdr-red green"># Lima Puluh Empat Juta Delapan Ratus Enam Puluh Empat Ribu Rupiah #</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Untuk Pembayaran</td>
-                    <td class="delimiter">:</td>
-                    <td>Sewa 1 unit Backhoe Loader, 1 Unit Vibro Roller & Dump Truck 7m3</td>
-                </tr>
-            </table> 
-        </div>
-        <div class="row blck ovrlw">
-            <div class="lft">
-                <div class="box pd10 brdr-red green">
-                    <p>Rp 54.864.000</p>
-                </div>
-                <br/>
-                <p>Pembayaran melalui Rekening ditujukan kepada :<br/>PUTRA BAHARI MANDIRI<br/>No. Rekening 0300185671<br/>BANK BNI<br/>KC Jakarta KBN TANJUNG PRIOK</p>
-            </div>
-            <div class="rgt">
-                <p>Bekasi, 21 Desember 2015<br/><br/><br/><br/><br/>Andri Lestari</p>
-            </div>
-        </div>
+        <table class="blck">
+            <tr>
+                <td>
+                    <table class="blck no-border">
+                        <tr>
+                            <td>
+                                <div class="row blck ovrlw rltv">
+                                    <div class="lft ovrlw">
+                                        <div class="pd10 lft cntr"><img src="assets/img/logo4.png"></div>
+                                        <div class="logo-side">
+                                            <p>PT. PUTRA BAHARI MANDIRI</p>
+                                            <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
+                                        </div>
+                                    </div>
+                                    <div class="rgt">
+                                        <table class="no-border">
+                                            <tr>
+                                                <td colspan="3"><span style="border-bottom:1px solid;">KWITANSI</span><br/><span>RECEIPT</span></td>
+                                            </tr>
+                                            <tr>
+                                                <td width="25%">No.<br/><span style="border-top:1px solid;">Number</span></td>
+                                                <td width="5%">:</td>
+                                                <td><div class="blck" style="border-bottom:thin dotted black;">106/10</div></td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <table class="border blck">
+                                    <tr>
+                                        <td>
+                                            <table class="blck no-border">
+                                                <tr>
+                                                    <td width="15%"><span style="border-bottom:1px solid;">Sudah Terima Dari</span><br/><span>Received From</span></td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">&nbsp;</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td width="15%"><span style="border-bottom:1px solid;">Banyaknya Uang</span><br/><span>Amount Received</span></td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">&nbsp;</div></td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <table class="blck no-border">
+                                                <tr>
+                                                    <td width="15%"><span style="border-bottom:1px solid;">Untuk Pembayaran</span><br/><span>In Payment Of</span></td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">&nbsp;</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td colspan="2">&nbsp;</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">&nbsp;</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td colspan="2">&nbsp;</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">&nbsp;</div></td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="row blck ovrlw rltv">
+                                    <div class="lft ovrlw">
+                                        <div class="rltv" style="border-bottom:2px solid;border-top:3px solid;width:300px;">
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div class="kwt blck">&nbsp;</div>
+                                            <div style="position:absolute;font-size:30px;top:8px;">
+                                                <span style="background:white;padding:3px 20px 3px 0;">Rp.</span> 1.000.000
+                                            </div>
+                                        </div>
+                                        <br/>
+                                        <p>Catatan :</p>
+                                        <ol>
+                                            <li>Mohon pembayaran ditransfer ke rekening bank berikut ini :<br/>BCA Cabang<br/>A/C 0001<br/>a.n. PT Putra Bahari Mandiri</li>
+                                            <li>Pembayaran baru dianggap sah setelah cek/giro telah dicairkan.</li>
+                                        </ol>
+                                    </div>
+                                    <div class="rgt cntr" style="margin-right:10px;">
+                                        <p>Jakarta, 1 Februari 2016</p>
+                                        <br/><br/><br/><br/><br/><br/><br/>
+                                        <p>Andri Lestari<br/>Direktur Utama</p>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
         <!--<p style="page-break-after:always;"/>-->
     </div>
 </body>
