add invoice penjualan

--- a/proyek_dashboard.html
+++ b/proyek_dashboard.html
@@ -138,7 +138,7 @@
               <div class="shortcuts"> 
                 <a href="barang_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-hdd"></i>
-                  <span class="shortcut-label">Barang</span> 
+                  <span class="shortcut-label">Barang / Jasa</span> 
                 </a>
               </div>
               <!-- /shortcuts --> 
