--- a/karyawan_list.html
+++ b/karyawan_list.html
@@ -175,6 +175,7 @@
                     <th> Telepon</th>
                     <th> Posisi</th>
                     <th> Jabatan</th>
+                    <th> Tipe Karyawan</th>
                     <th> Status Pernikahan</th>
                     <th> Status Karyawan</th>
                     <th class="td-actions"> </th>
@@ -189,6 +190,7 @@
                     <td> 081208120812 </td>
                     <td> Operator Folklift </td>
                     <td> Staff </td>
+                    <td> Back Office</td>
                     <td> Menikah </td>
                     <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
@@ -201,6 +203,7 @@
                     <td> 081208120812 </td>
                     <td> Operator Folklift </td>
                     <td> Supervisor </td>
+                    <td> Front Office</td>
                     <td> Menikah </td>
                     <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
@@ -213,6 +216,7 @@
                     <td> 081208120812 </td>
                     <td> Operator Folklift </td>
                     <td> Manager Operasional </td>
+                    <td> Back Office</td>
                     <td> Menikah </td>
                     <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
@@ -225,6 +229,7 @@
                     <td> 081208120812 </td>
                     <td> Operator Folklift </td>
                     <td> Staff </td>
+                    <td> Front Office</td>
                     <td> Menikah </td>
                     <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
@@ -237,6 +242,7 @@
                     <td> 081208120812 </td>
                     <td> Operator Folklift </td>
                     <td> Staff </td>
+                    <td> Front Office</td>
                     <td> Menikah </td>
                     <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
@@ -249,6 +255,7 @@
                     <td> 081208120812 </td>
                     <td> Operator Folklift </td>
                     <td> Staff </td>
+                    <td> Back Office</td>
                     <td> Menikah </td>
                     <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
