update print bukti pembayaran

--- a/print_bukti_pembayaran.html
+++ b/print_bukti_pembayaran.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+    <link href="assets/css/font-awesome.css" rel="stylesheet">
     <style type="text/css" media="all">
-    	* {
-			box-sizing: border-box;
-			-moz-box-sizing: border-box;
-			-webkit-box-sizing: border-box;
-		}
+        * {
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+        }
         @page {
             size: A4 landscape; /* can use also 'landscape' for orientation */
             margin: 0.2in;
@@ -40,53 +41,53 @@
         }
 
         table {
-		    border-collapse: collapse;
-		}
+            border-collapse: collapse;
+        }
 
-		table, th, td {
-		    border: 1px solid black;
-		}
+        table, th, td {
+            border: 1px solid black;
+        }
 
-		div, tr {
-			-webkit-print-color-adjust: exact; 
-		}
+        div, tr {
+            -webkit-print-color-adjust: exact; 
+        }
 
-		th, td {
-		    padding: 5px;
-		    text-align: left;
-		}
+        th, td {
+            padding: 5px;
+            text-align: left;
+        }
 
-		.remove-bottom-border {
-			border-bottom: 1px solid white;
-		}
+        .remove-bottom-border {
+            border-bottom: 1px solid white;
+        }
 
         .remove-bottom-border.add-bottom {
             border-bottom: 1px solid black;   
         }
 
-		tr.header-color th {
-			text-align:center;
-			background-color:blue;
-			color:white;
-		}
+        tr.header-color th {
+            text-align:center;
+            background-color:blue;
+            color:white;
+        }
 
-		.row {
-			display: block;
-			margin-bottom:20px;
-		}
+        .row {
+            display: block;
+            margin-bottom:20px;
+        }
 
-		.ovrlw {
-			overflow:hidden;			
-		}
+        .ovrlw {
+            overflow:hidden;            
+        }
 
-		.brdr {
-			border: 1px solid;
-			padding: 5px; 
-		}
+        .brdr {
+            border: 1px solid;
+            padding: 5px; 
+        }
 
-		p, ul, ol, h3 {
-			margin: 0;
-		}
+        p, ul, ol, h3 {
+            margin: 0;
+        }
 
         .ftr {
             border:1px solid;
@@ -148,90 +149,161 @@
             width: 80px;
         }
 
-        table.no-border, table.no-border th, table.no-border td {
+        table.no-border, table.no-border>tbody>tr>th, table.no-border>tbody>tr>td {
             border: none;
+        }
+
+        .logo-side {
+            margin-left: 190px;
+        }
+
+        .srt-jln {
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .vrt-top {
+            vertical-align: top;
+        }
+
+        .tnd-trm {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .hlf-blck {
+            width: 49%;
+        }
+
+        .prf {
+            width: 13%;
+        }
+        tr.pd-topbot-2 td {
+            padding: 2px 5px;
+        }
+
+        table.border>tbody>tr {
+            border: 1px solid black;
+        }
+
+        table.kwt th, table.kwt td {
+            padding: 1px;
+        }
+
+        .kwt {
+            border-top: none;
+            border-bottom: 1px solid;
+            height: 5px;
         }
     </style>
 </head>
 
 <body>
     <div id="page-content">
-        <div class="row blck cntr">
-            <p>BUKTI PEMBAYARAN<br/>ORIFLAME</p>
-        </div>
-        <div class="row blck ovrlw">
-            <div class="lft">
-                <table class="no-border ">
-                    <tr>
-                        <td>TGL TRANSAKSI</td>
-                        <td class="delimiter">:</td>
-                        <td>01/05/2012</td>
-                    </tr>
-                    <tr>
-                        <td>NO TRANSAKSI</td>
-                        <td class="delimiter">:</td>
-                        <td>001</td>
-                    </tr>
-                    <tr>
-                        <td>KODE CABANG</td>
-                        <td class="delimiter">:</td>
-                        <td>0206</td>
-                    </tr>
-                    <tr>
-                        <td>NO REKENING</td>
-                        <td class="delimiter">:</td>
-                        <td>0206010000003509</td>
-                    </tr>
-                    <tr>
-                        <td>NAMA REKENING</td>
-                        <td class="delimiter">:</td>
-                        <td>NAMA REKENING</td>
-                    </tr>
-                    <tr>
-                        <td>NAMA KONSULTAN</td>
-                        <td class="delimiter">:</td>
-                        <td>XYZ</td>
-                    </tr>
-                    <tr>
-                        <td>NO INVOICE</td>
-                        <td class="delimiter">:</td>
-                        <td>001</td>
-                    </tr>
-                    <tr>
-                        <td>TOTAL TAGIHAN</td>
-                        <td class="delimiter">:</td>
-                        <td>IDR 250000</td>
-                    </tr>
-                    <tr>
-                        <td>TERBILANG</td>
-                        <td class="delimiter">:</td>
-                        <td>DUA RATUS LIMA PULUH RIBU RUPIAH</td>
-                    </tr>
-                </table>
-            </div>
-            <div class="rgt">
-                <table class="no-border">
-                    <tr>
-                        <td>JAM TRANSAKSI</td>
-                        <td class="delimiter">:</td>
-                        <td>10:45:37</td>
-                    </tr>
-                    <tr>
-                        <td>CHANNEL</td>
-                        <td class="delimiter">:</td>
-                        <td>TELLER</td>
-                    </tr>
-                    <tr>
-                        <td>USER ID</td>
-                        <td class="delimiter">:</td>
-                        <td>0206051</td>
-                    </tr>
-                </table>    
-            </div>
-        </div>
-        <div class="row blck cntr">
-            <p>HARAP TANDA BUKTI INI DISIMPAN SEBAGAI TANDA PEMBAYARAN YANG SAH</p>
-        </div>
+        <table class="blck">
+            <tr>
+                <td>
+                    <table class="blck no-border">
+                        <tr>
+                            <td>
+                                <div class="row blck ovrlw rltv">
+                                    <div class="lft ovrlw">
+                                        <div class="pd10 lft cntr"><img src="assets/img/logo4.png"></div>
+                                        <div class="logo-side">
+                                            <p>PT. PUTRA BAHARI MANDIRI</p>
+                                            <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
+                                        </div>
+                                    </div>
+                                    <div class="rgt">
+                                        <table class="no-border">
+                                            <tr>
+                                                <td colspan="3"><span>BUKTI PEMBAYARAN</span></td>
+                                            </tr>
+                                            <tr>
+                                                <td width="25%">No.<br/><span style="border-top:1px solid;">Number</span></td>
+                                                <td width="5%">:</td>
+                                                <td><div class="blck" style="border-bottom:thin dotted black;">106/10</div></td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <table class="border blck">
+                                    <tr>
+                                        <td>
+                                            <table class="blck no-border">
+                                                <tr>
+                                                    <td width="20%">TGL TRANSAKSI</td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">01/05/2012</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td width="20%">NO TRANSAKSI</td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">001</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td width="20%">NO REKENING</td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">0206010000003509</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td width="20%">NAMA REKENING</td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">NAMA REKENING</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td width="20%">NO INVOICE</td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">001</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td width="20%">TOTAL TAGIHAN</td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">IDR 250000</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td width="20%">TERBILANG</td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">DUA RATUS LIMA PULUH RIBU RUPIAH</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td width="20%">JAM TRANSAKSI</td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">10:45:37</div></td>
+                                                </tr>
+                                                <tr>
+                                                    <td width="20%">Jenis Transaksi</td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;">Cash</div></td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="row blck ovrlw rltv">
+                                    <div class="rgt cntr" style="margin-right:10px;">
+                                        <p>Jakarta, 1 Februari 2016</p>
+                                        <br/><br/><br/><br/><br/><br/><br/>
+                                        <p>Andri Lestari<br/>Direktur Utama</p>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
         <!--<p style="page-break-after:always;"/>-->
     </div>
 </body>
